fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1056,8 +1056,7 @@ input, select, textarea {
 			height: 100%;
 			margin: 0;
 			padding: 0;
-			overflow-y: hidden;
-			-webkit-overflow-scrolling: touch;
+			/* overflow-x: hidden; */
 		}
 			.row {
 				display: flex;
